3. Junit тест для блокирующей очереди. [#68589]